# 2D-Rendering

./: CMakeLists.txt  LICENSE  Links.txt  TODO.txt  TestContainer.cpp  TestContainer.h
Engine/: AssetManager.cpp  AssetManager.h  Container.cpp  Container.h  Global.h  Scene.h  SceneManager.cpp  SceneManager.h  Types.h
Engine/Math/: ColorRGBA.h  Constants.h  Math.h  Matrix4f.h  Vector2f.h
Engine/Nodes/: Camera.cpp  Camera.h  Node.cpp  Node.h
Engine/Nodes/NodeComponents/: NodeComponent.cpp  NodeComponent.h
Engine/Nodes/Objects/: Image.cpp  Image.h  Object.cpp  Object.h
Engine/Nodes/Objects/ObjectComponents/: MeshRenderer.cpp  MeshRenderer.h  ObjectComponent.cpp  ObjectComponent.h
Engine/Rendering/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Primitives.h  RenderInterface.cpp  RenderInterface.h  RenderItem.cpp  RenderItem.h  RenderLayer.cpp  RenderLayer.h  RenderManager.cpp  RenderManager.h  RenderParameter.cpp  RenderParameter.h  Shader.cpp  Shader.h  StandardMaterial.cpp  StandardMaterial.h  Texture.cpp  Texture.h
Engine/Rendering/OGL33/: Mesh_OGL33.cpp  Mesh_OGL33.h  RenderInterface_OGL33.cpp  RenderInterface_OGL33.h  RenderItem_OGL33.cpp  RenderItem_OGL33.h  Shader_OGL33.cpp  Shader_OGL33.h  Texture_OGL33.cpp  Texture_OGL33.h
Engine/Resources/Shaders/GLSL33/: Standard.frag  Standard.vert
Engine/Structs/: CullingCircle.h
Engine/Utilities/: FileReader.h  Logger.cpp  Logger.h
